<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorDiviseur">


    <android.support.v7.widget.CardView
        android:id="@+id/cardInfoNeighbour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        app:cardCornerRadius="5dp">

        <RelativeLayout
            android:id="@+id/cardInfoNeighbour_rl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/cardNameNeighbour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/marging_title_bottom"
                android:layout_marginTop="@dimen/marging_title_vertical"
                android:layout_marginLeft="@dimen/marging_text_horizontal"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_title_size" />

            <View
                android:id="@+id/divider_cardname"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/cardNameNeighbour"
                android:background="@color/colorDiviseur" />

            <LinearLayout
                android:id="@+id/adresse_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/divider_cardname"
                android:gravity="center_vertical"
                android:layout_marginTop="@dimen/marging_text_vertical">
                <ImageView
                    android:id="@+id/imgAddress"
                    android:layout_width="@dimen/logo_width_height"
                    android:layout_height="@dimen/logo_width_height"
                    android:layout_marginLeft="@dimen/marging_text_horizontal"
                    android:layout_marginTop="@dimen/marging_text_vertical"
                    android:layout_marginBottom="@dimen/marging_text_vertical"
                    android:src="@drawable/ic_room_24px" />

                <TextView
                    android:id="@+id/cardAddressNeighbour"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/marging_text_horizontal"
                    android:hint="Address"
                    android:textSize="@dimen/text_size"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/phone_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/adresse_layout"
                android:gravity="center_vertical">
                <ImageView
                    android:id="@+id/imgPhone"
                    android:layout_width="@dimen/logo_width_height"
                    android:layout_height="@dimen/logo_width_height"
                    android:layout_marginLeft="@dimen/marging_text_horizontal"
                    android:layout_marginTop="@dimen/marging_text_vertical"
                    android:layout_marginBottom="@dimen/marging_text_vertical"
                    android:src="@drawable/ic_phone_24px" />
                <TextView
                    android:id="@+id/cardPhoneNeighbour"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/marging_text_horizontal"
                    android:hint="Phone"
                    android:textSize="@dimen/text_size"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/phone_layout"
                android:gravity="center_vertical">
                <ImageView
                    android:id="@+id/imgSite"
                    android:layout_width="@dimen/logo_width_height"
                    android:layout_height="@dimen/logo_width_height"
                    android:layout_marginBottom="@dimen/marging_text_vertical"
                    android:layout_marginTop="@dimen/marging_text_vertical"
                    android:layout_marginLeft="@dimen/marging_text_horizontal"
                    android:src="@drawable/ic_language_24px"
                    />
                <TextView
                    android:id="@+id/cardSiteNeighbour"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/marging_text_horizontal"
                    android:hint="Site"
                    android:textSize="@dimen/text_size"
                    />

            </LinearLayout>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cardAboutMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cardInfoNeighbour"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/marging_title_vertical"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/marging_text_vertical"
        app:cardCornerRadius="5dp">

        <RelativeLayout
            android:id="@+id/cardAboutMe_rl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/marging_text_vertical">

            <TextView
                android:id="@+id/cardTitleAboutMe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/marging_title_bottom"
                android:layout_marginTop="@dimen/marging_title_vertical"
                android:layout_marginLeft="@dimen/marging_text_horizontal"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_title_size"
                android:text="@string/tv_about_me"
                />

            <View
                android:id="@+id/divider_aboutme"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/cardTitleAboutMe"
                android:background="@color/colorDiviseur"
                android:layout_marginBottom="@dimen/marging_title_bottom"/>

            <TextView
                android:id="@+id/cardTextAboutMe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marging_text_vertical"
                android:paddingLeft="10dp"
                android:layout_below="@id/divider_aboutme"
                android:hint="@string/tv_about_me_hint"
                android:textSize="@dimen/text_size"
                android:paddingRight="5dp"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>