<resources>
    <string name="app_name">Entrevoisins</string>
    <string name="tab_neighbour_title">My neighbours</string>
    <string name="tab_favorites_title">Favorites</string>
    <string name="img_neighbour">Image Voisin</string>
    <string name="title_collpsing_tollbar">Titouane</string>
    <string name="tv_about_me">A propos de moi</string>
    <string name="tv_about_me_hint">Nunc at quam posuere, aliquam urna nec, mollis elit. Praesent convallis est tincidunt purus placerat accumsan.</string>
    <string name="btn_nofavori">NOFAVORI</string>

    <string name="txt_ajout_favori">Voisin ajouté à la liste des favoris</string>
    <string name="txt_retrait_favori">Voisin retiré de la liste des favoris</string>

</resources>
